@@ -77,17 +77,17 @@
     </user-facade>
 
     <transaction-facade use-transaction-cache="true">
+        <!-- Use this one for the internal transaction manager -->
+        <transaction-internal class="org.moqui.impl.context.TransactionInternalAtomikos"/>
+
         <!-- if this is not present the default JNDI server will be used -->
         <!-- <server-jndi context-provider-url="rmi://127.0.0.1:1099"
                      initial-context-factory="com.sun.jndi.rmi.registry.RegistryContextFactory"
                      url-pkg-prefixes="java.naming.rmi.security.manager"
                      security-principal="" security-credentials=""/> -->
 
-        <!-- Use this one for the internal transaction manager -->
-        <transaction-factory factory-type="internal"/>
-
         <!-- Use this one for getting the JTA objects from JNDI -->
-        <!-- <transaction-factory factory-type="jndi" transaction-manager-jndi-name="java:comp/UserTransaction"
+        <!-- <transaction-jndi transaction-manager-jndi-name="java:comp/UserTransaction"
                              user-transaction-jndi-name="java:comp/UserTransaction"/> -->
         <!-- UserTransaction JNDI name for most servers: java:comp/UserTransaction (most servers: Resin, Orion, OC4J, etc)
             JBoss (separate objects): "java:comp/UserTransaction" and "java:comp/TransactionManager"
